2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.m4:
	  Change nonsense error message to tell that gtk-doc is needed to build
	  a given package and not gtk-doc. Fixes #568734.
	  

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-scan.in:
	  Treat iface/interface like class in other places too.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-scan.in:
	  Use CamelCase id for interfaces. Fixes #568706.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-mkhtml.in:
	* gtkdoc-mkman.in:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Less quirky way of knowing that we run uninstalled, which is only
	  needed for the tests anyway. In addition to the patch, make same
	  changes in mkman, add a shift to arg parsing to not loop and change
	  the makefiles for the tests. Fixes #568702.

2009-01-22  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Only run the syntax highligher if we have one. Fixes #568714.

2009-01-22  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Point to the right docs.

	* TODO:
	  More tinking.

	* style.css:
	  Remove one commented out item.

2009-01-21  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.in:
	* gtkdoc-fixxref.in:
	* style.css:
	  Match css of highlight with source-highlight. Handle line numbering by
	  our-selfs. Still stupid browsers copy '#' chars for each line number.

2009-01-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Try to xref first word in 'normal' span.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mkdb.in:
	* tests/gobject/src/gobject.c:
	  We could add the language as a comment, it is not shown in the final output.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtkdoc-fixxref.in: